tolk-tester/tests/invalid-syntax/err-3802.tolk
struct A {
    id1: int
    id2: int
}

/**
@compilation_should_fail
@stderr expected `;` or `,`, got `id2`
*/
